--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "describe": "^1.2.0",
     "eureka-js-client": "^4.5.0",
     "i": "^0.3.6",
+    "jest": "^27.0.6",
+    "jest-all": "^0.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-test-renderer": "^17.0.2",
+    "test-library": "^1.0.0",
     "validator": "^13.6.0",
     "web-vitals": "^1.0.1"
   },
