adjust sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,7 @@
 sonar.projectKey=BeardTrust-UserPortal
-sonar.javascript.lcov.reportPaths
+sonar.sources=src
+sonar.tests=src
+sonar.inclusions=**
+sonar.test.inclusions=src/**/*.spec.ts
+sonar.testExecutionReportPaths=test-report.xml
+sonar.exclusions=node_modules 
