--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-test-renderer": "^17.0.2",
     "test-library": "^1.0.0",
     "validator": "^13.6.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "sonar": "node sonar-project.js"
   },
   "scripts": {
     "start": "react-scripts start",
