--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test",
   "version": "0.1.0",
   "private": true,
+  "sonar": "node sonar-project.js",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -22,8 +23,7 @@
     "react-test-renderer": "^17.0.2",
     "test-library": "^1.0.0",
     "validator": "^13.6.0",
-    "web-vitals": "^1.0.1",
-    "sonar": "node sonar-project.js"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
