--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react-test-renderer": "^17.0.2",
     "test-library": "^1.0.0",
     "validator": "^13.6.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "mocha": "~1.10.0",
+    "istanbul": "~0.1.36",
+    "mocha-istanbul": "~0.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nyc": "^15.1.0"
   }
 }
