--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,5 @@
 sonar.projectKey=BeardTrust-UserPortal
-sonar.typescript.lcov.reportPaths
+sonar.sources=src
+sonar.tests=src
+sonar.test.inclusions=src/**/*/*.spec.js,src/**/*/*.spec.js,src/**/*/*.test.js,src/**/*/*.test.js
+sonar.javascript.lcov.reportPaths=coverage/jest/lcov.info
