--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest --coverage",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "sonar": "sonar-scanner"
+  
   },
   "eslintConfig": {
     "extends": [
