--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=BeardTrust-UserPortal
-sonar.sources=src
-sonar.tests=src
-sonar.test.inclusions=src/**/*/*.spec.js,src/**/*/*.spec.js,src/**/*/*.test.js,src/**/*/*.test.js
-sonar.javascript.lcov.reportPaths=coverage/jest/lcov.info
+sonar.language=js
+sonar.sources=/src
+sonar.tests=/src/**/*/*
+
+sonar.javascript.lcov.reportPaths=/coverage/lcov-report
