--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "sonar": "sonar-scanner"
-  
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -52,5 +50,11 @@
   },
   "devDependencies": {
     "nyc": "^15.1.0"
+  },
+  "jestSonar": {
+    "sonar56x": true,
+    "reportPath": "testResults",
+    "reportFile": "sonar-report.xml",
+    "indent": 4
   }
 }
