--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=BeardTrust-UserPortal
 sonar.language=js
-sonar.sources=/src
+sonar.sources=src
 sonar.tests=src
 
 sonar.javascript.lcov.reportPaths=/coverage/lcov-report
