adjust sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,5 +2,5 @@ sonar.projectKey=BeardTrust-UserPortal
 #sonar.language=js
 #sonar.sources=src
 #sonar.tests=src
-
-sonar.javascript.lcov.reportPaths=/coverage/lcov-report
+sonar.exclusions=node_modules/**, coverage/**, public/**, build/**, **/__tests__/**
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
