--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false && react-scripts build",
     "postbuild": "rimraf build/**/*.map",
     "test": "react-scripts test --coverage --watchAll=false  --forceExit  -u",
     "eject": "react-scripts eject"
