--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -69,8 +70,8 @@
     ]
   },
   "devDependencies": {
-    "nyc": "^15.1.0",
-    "jenkins-mocha": "latest"
+    "jenkins-mocha": "latest",
+    "nyc": "^15.1.0"
   },
   "jestSonar": {
     "sonar56x": true,
